--- a/_site.yml
+++ b/_site.yml
@@ -3,10 +3,13 @@ title: "Distill Workshop!"
 description: |
   Distill Workshop!
 output_dir: "docs"
+theme: custom-theme.css
 navbar:
   right:
     - text: "Home"
       href: index.html
     - text: "About"
       href: about.html
+    - text: "Getting Started"
+      href: getting_started.html
 output: distill::distill_article
